--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				>
 					<p>spider</p>
 					<img
-						src="/img/spider.webp"
+						src="/img/spider.jpg"
 						alt="spider"
 						class="settings-image"
 					/>
@@ -86,8 +86,10 @@
 			id="game"
 		>
 			<div class="time">Time:</div>
-			<div class="score">Score:</div>
-			<div class="insect"></div>
+			<div class="score">Score:0</div>
+			<div class="playField">
+				<div class="insect"></div>
+			</div>
 		</div>
 	</body>
 </html>
